--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website">
 </head>
 <body>
-  <script>window.NAV_BASE = './web/';</script>
+  <script>window.NAV_BASE = './web/'; window.ASSET_BASE = './web/';</script>
   <header>
     <div id="site-nav"></div>
   </header>
